# pipeline-youtube

./: .gitignore  README.md  config.example.json  pyproject.toml
.github/workflows/: codeql.yml  main.yml  release.yml
docker/: Dockerfile.capture
docs/: agent-teams-profiles.md  cli.md  docker.md  sample-run.md
pipeline_youtube/: __init__.py  checkpoint.py  config.py  genres.py  main.py  obsidian.py  pipeline.py  playlist.py  sanitize.py  stats.py
pipeline_youtube/providers/: claude_cli.py
pipeline_youtube/stages/: capture.py  capture_backend.py  learning.py  scripts.py  summary.py  synthesis.py
pipeline_youtube/synthesis/: agents.py  chapter.py  moc.py  scoring.py
pipeline_youtube/transcript/: auto.py  base.py  chunking.py  official.py  whisper_fallback.py
reviews/run-2026-04-19-2111/: 00_MOC.md  01_評価設計と自動実験ループの構築.md  02_自律実行とGUI自動化による作業委譲.md  03_音声・ハイブリッド入力による操作効率化.md
tests/: test_capture_backend.py  test_capture_stage.py  test_checkpoint.py  test_checkpoint_hardening.py  test_chunking_fillers.py  test_claude_binary_resolution.py  test_claude_cli.py  test_claude_cli_retry.py  test_config_models.py  test_cost_breakdown.py  test_e2e_playlist.py  test_genres.py  test_learning_code_bearing.py  test_learning_mapping.py  test_learning_stage.py  test_obsidian.py  test_phase_gate.py  test_pipeline_parallel.py  test_pipeline_placeholders.py  test_reflexion_loop.py  test_scripts_stage.py  test_summary_stage.py  test_synthesis_agents.py  test_synthesis_profile.py  test_synthesis_prompt_rules.py  test_synthesis_scoring.py  test_synthesis_stage.py  test_tmp_permissions.py  test_transcript_official_auto.py  test_url_validation.py  test_whisper_fallback.py  test_whisper_integrity.py
