[project]
name = "pipeline-youtube"
version = "0.1.0"
description = "YouTube playlist -> Obsidian vault learning pipeline"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "yt-dlp>=2026.3",
    "youtube-transcript-api>=0.6",
    "httpx>=0.27",
    # AI calls go through `claude -p` headless CLI (OAuth via Claude plan).
    # No `anthropic` SDK dependency — see providers/claude_cli.py.
]

[project.optional-dependencies]
# Whisper pulls in torch (~2GB). Install only when local transcription fallback is needed:
#   uv sync --extra whisper
whisper = [
    "openai-whisper>=20240930",
    "filelock>=3.13",
]

[project.scripts]
pipeline-youtube = "pipeline_youtube.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline_youtube"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
